# dataset-recording

./: CMakeLists.txt
cmake/: FindKinect2SDK.cmake  FindKinectSDK.cmake
include/: cameraDriver.h  driver.h  kinect2driver.h  kinectDriver.h
src/: cameraDriver.cpp  kinect2driver.cpp  kinectDriver.cpp  main.cpp
